Project

General

Profile

Actions

Bug #20806

closed

kclient: fails to delete tree during thrashing w/ multimds

Added by Patrick Donnelly over 6 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
multimds
Component(FS):
kceph
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2017-07-26T21:10:11.273 INFO:tasks.workunit.client.0.smithi086.stdout:7/998: dwrite de/d30/d39/d76/d79/dc0/dea/df3/f12b [0,4194304] 0
2017-07-26T21:10:11.284 INFO:tasks.workunit.client.0.smithi086.stdout:7/999: read de/d30/f83 [350912,68971] 0
2017-07-26T21:10:11.847 INFO:teuthology.orchestra.run.smithi086:Running: 'sudo rm -rf -- /home/ubuntu/cephtest/mnt.0/client.0/tmp'
2017-07-26T21:10:35.401 INFO:tasks.ceph.mon.b.smithi003.stderr:2017-07-26 21:10:35.377757 7f697ffcc700 -1 log_channel(cluster) log [ERR] : overall HEALTH_ERR 1 MDSs report damaged metadata
2017-07-26T21:10:36.451 INFO:tasks.workunit.client.0.smithi086.stderr:rm: cannot remove ‘/home/ubuntu/cephtest/mnt.0/client.0/tmp/fsstress-smithi0862127/p2/d0’: Directory not empty

From: /ceph/teuthology-archive/pdonnell-2017-07-26_18:05:17-multimds-wip-pdonnell-testing-20170725-testing-basic-smithi/1447902/teuthology.log

Actions #1

Updated by Patrick Donnelly over 6 years ago

  • Assignee set to Zheng Yan

Zheng, please take a look.

Actions #2

Updated by Zheng Yan over 6 years ago

  • Status changed from New to In Progress

it's caused by bug in "open inode by inode number" function

Actions #3

Updated by Zheng Yan over 6 years ago

  • Status changed from In Progress to Fix Under Review
Actions #4

Updated by Patrick Donnelly over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF