mds: fix race in "open inode by inode number"

If we have found inode in peer mds' cache, but failed to discover
the inode. The path to inode must have changed. we should check
peer again, instead of fetching backtrace, because inode's backtrace
may haven't been stored.

Fixes: http://tracker.ceph.com/issues/20806
Signed-off-by: "Yan, Zheng" <zyan@redhat.com>